--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- <html lang="en">
+<html lang="en">
 
  <head>
   <meta charset="UTF-8" /> 
@@ -155,4 +155,4 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="application/javascript" src="main.js"></script>
 
-</html> -->
+</html>
